Fix wrong height in timetable page

--- a/react/src/styles/App.module.scss
+++ b/react/src/styles/App.module.scss
@@ -1125,6 +1125,7 @@ a {
 
         &__content {
             flex: 1 1 auto;
+            height: 0;
             display: flex;
             flex-direction: column;
 
